# Activia-trace

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  LICENSE  README.md  RESUMEN_VIDEO_ENTREGA.md  build.bat  build.sh  docker-compose.yml  go.mod  go.sum  init-test-db.sql
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/alembic/: env.py
backend/app/: main.py
backend/core/: audit.py  config.py  crypto.py  database.py  dependencies.py  logging.py  observability.py  tenancy.py
backend/integrations/: moodle_ws.py
backend/models/: __init__.py  asignacion.py  audit.py  avisos.py  base.py  calificacion.py  comunicacion.py  encuentros.py  estructura.py  evaluaciones.py  liquidaciones.py  mensajeria_interna.py  mixins.py  padron.py  programas.py  rbac.py  recovery_token.py  session.py  tareas.py  tenant.py  user.py
backend/repositories/: __init__.py  asignacion.py  base.py  estructura.py  programas.py  session.py  usuario.py
backend/schemas/: analisis.py  asignacion.py  auditoria.py  auth.py  aviso.py  calificacion.py  carrera.py  cohorte.py  coloquio.py  comunicacion.py  encuentro.py  evaluacion.py  factura.py  guardia.py  liquidacion.py  materia.py  mensajeria_interna.py  padron.py  programas.py  rbac.py  salario.py  tarea.py  usuario.py
backend/scripts/: fix_liquidaciones_schema.py  migrate_asignaciones.py  seed_admin.py  seed_rbac.py  seed_test_users.py
backend/services/: __init__.py  analisis.py  asignacion.py  auditoria.py  (+17 more)
(+625 files in other folders)
