[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "activia-trace"
version = "0.1.0"
description = "Plataforma de gestión académica y trazabilidad multi-tenant"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "argon2-cffi>=23.1.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "models*", "schemas*", "repositories*", "services*", "integrations*", "workers*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
